# scenetree

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: lint.yml
src/frameforest/: __init__.py  workspace.py
src/scenetree/: __init__.py  workspace.py
tests/: test_scene.py
