[project]
name = "scenetree"
version = "0.1.0"
description = "Manage geometric objects across coordinate frames"
readme = "README.md"
authors = [
    { name = "Claude", email = "noreply@anthropic.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pytransform3d>=3.14.4",
    "scikit-spatial>=9.0.1",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[project.optional-dependencies]
graph = ["pydot>=3.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.14.8",
    "ty>=0.0.0a6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D400", "D415", "SLF001", "EM102", "TRY003", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["S", "ANN", "INP"] # Be lenient in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
